QA-8315: update e fix [M2M_ESERVICES_CERTIFIED_ATTRIBUTES_ADD_(01...06)]